--- a/app/templates/demo3.html
+++ b/app/templates/demo3.html
@@ -73,11 +73,14 @@
                         }
                     }">
                     <div class="swiper-wrapper row cols-xl-6 cols-lg-5 cols-md-4 cols-sm-3 cols-2">
-                       {% for brand in brands %}
+
+
+                        {% for brand in brands %}
                         <div class="swiper-slide category category-ellipse">
                             <figure class="category-media">
-                                <a href="shop-banner-sidebar.php?category_id=<?=$category->Category_ID?>">
-                                    <img src="{{ url_for('static', filename=brand.picture) }}" alt="Categroy" width="190"
+                                <a href="shop-banner-sidebar.html?category_id=<?=$category->Category_ID?>">
+                                    <img src="{{ url_for('static', filename=brand.picture) }}" alt="Categroy"
+                                         width="190"
                                          height="190" style="background-color: #5C92C0;"/>
                                 </a>
                             </figure>
@@ -277,6 +280,7 @@
                                 دریافت کنید.
                             </p>
                         </div>
+
                         <div class="content-right">
                             <form action="#" method="get"
                                   class="input-wrapper input-wrapper-rounded ml-auto mr-auto mr-lg-0">
