--- a/app/templates/demo3.html
+++ b/app/templates/demo3.html
@@ -78,7 +78,7 @@
                         {% for brand in brands %}
                         <div class="swiper-slide category category-ellipse">
                             <figure class="category-media">
-                                <a href="shop-banner-sidebar.html?category_id=<?=$category->Category_ID?>">
+                                <a href="{{ url_for ('goods',brand_name=brand.name)}}">
                                     <img src="{{ url_for('static', filename=brand.picture) }}" alt="Categroy"
                                          width="190"
                                          height="190" style="background-color: #5C92C0;"/>
