product-default.html page implemented

--- a/app/templates/shop-banner-sidebar.html
+++ b/app/templates/shop-banner-sidebar.html
@@ -103,7 +103,7 @@
                             <div class="product-wrap">
                                     <div class="product text-center">
                                         <figure class="product-media">
-                                            <a href="product-default.php?menu_id=<?=$product->Menu_ID; ?>">
+                                            <a href="product-default.html?menu_id=<?=$product->Menu_ID; ?>">
                                                <img src="{{ url_for('static', filename='upload/' + good[0] + '.jpg') }}"
                                                     alt="Product" width="300" height="338" />
                                             </a>
@@ -123,14 +123,14 @@
                                                 <a href="shop-banner-sidebar.php"> </a>
                                             </div>
                                             <h3 class="product-name">
-                                                <a href="product-default.php?menu_id=<?=$product->Menu_ID; ?>">{{ good[1] }}</a>
+                                                <a href="product-default.html?menu_id=<?=$product->Menu_ID; ?>">{{ good[1] }}</a>
                                             </h3>
                                             <div class="ratings-container">
                                                 <div class="ratings-full">
                                                     <span class="ratings" style="width: 100%;"></span>
                                                     <span class="tooltiptext tooltip-top"></span>
                                                 </div>
-                                                <a href="product-default.php?menu_id=<?=$product->Menu_ID; ?>" class="rating-reviews">(3 نظر )</a>
+                                                <a href="product-default.html?menu_id=<?=$product->Menu_ID; ?>" class="rating-reviews">(3 نظر )</a>
                                             </div>
                                             <div class="product-pa-wrapper">
                                                 <div class="product-price">
