--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,12 +14,21 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href=" {{ url_for('static', filename='css/images/Zagros-logo.png') }}">
+    <link rel="stylesheet" type="text/css"
+      href="{{ url_for('static', filename='vendor/magnific-popup/magnific-popup.min.css') }}">
+
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='vendor/photoswipe/photoswipe.min.css') }}">
+<link rel="stylesheet" type="text/css"
+      href="{{ url_for('static', filename='vendor/photoswipe/default-skin/default-skin.min.css') }}">
+
+<!-- Default CSS -->
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style-rtl.min.css') }}">
 
     <!-- Bootstrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFY
-lzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFY-->
+<!--lzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
     <!-- WebFont.js -->
     <script>
         WebFontConfig = {
@@ -56,6 +65,10 @@ lzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
 
     <!-- Default CSS -->
     <link rel="stylesheet" type="text/css" href=" {{ url_for('static', filename='css/demo3.min.css') }} ">
+
+
+
+
 
 </head>
 
@@ -168,7 +181,7 @@ lzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
                             <div class="products">
                                 <div class="product product-cart">
                                     <div class="product-detail">
-                                        <a href="product-default.php" class="product-name"><?= $product[0]->Menu_name
+                                        <a href="product-default.html" class="product-name"><?= $product[0]->Menu_name
                                             ?></a>
                                         <div class="price-box">
                                             <span class="product-quantity">1</span>
@@ -176,7 +189,7 @@ lzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
                                         </div>
                                     </div>
                                     <figure class="product-media">
-                                        <a href="product-default.php">
+                                        <a href="product-default.html">
                                             <img src="admin/<?= $product[0]->Menu_image ?>" alt="product" height="84"
                                                  width="94"/>
                                         </a>
