implmentation product-defualt.html

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -253,7 +253,7 @@
                         <nav class="main-nav">
                             <ul class="menu active-underline">
                                 <li>
-                                    <a href="<?= BASE_URL ?>">خانه </a>
+                                    <a href="{{ url_for ('home')}}">خانه </a>
                                 </li>
 
 
