--- a/app/templates/product-default.html
+++ b/app/templates/product-default.html
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="col-md-6 mb-4 mb-md-6">
                                     <div class="product-details" data-sticky-options="{'minWidth': 767}">
-                                        <h1 class="product-title">ساعت مچی مشکی الکترونیکی</h1>
+                                        <h1 class="product-title">{{ good[0][1]}}</h1>
                                         <div class="product-bm-wrapper">
                                             <figure class="brand">
                                                 <img src="assets/images/products/brand/brand-1.jpg" alt="Brand" width="102" height="48">
@@ -101,7 +101,7 @@
 
                                         <hr class="product-divider">
 
-                                        <div class="product-price"><ins class="new-price">80000 تومان </ins></div>
+                                        <div class="product-price"><ins class="new-price">{{ good[0][8]}} تومان </ins></div>
 
                                         <div class="ratings-container">
                                             <div class="ratings-full">
@@ -127,9 +127,7 @@
 
                                         </div>
 
-                                        <div class="product-variation-price">
-                                            <span></span>
-                                        </div>
+                                        
 
                                         <div class="sticky-content-wrapper" style="height: 54px;"><div class="fix-bottom product-sticky-content sticky-content fixed">
                                             <div class="product-form container">
