create order item table

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -80,6 +80,7 @@
 
                         <div class="cart-action mb-6">
                              <a href="{{ url_for('clear_cart') }}" class=" btn btn-dark btn-rounded btn-icon-left btn-shopping mr-auto">پاک کردن سبد</a>
+                            <a href="{{ url_for('discount') }}" class=" btn btn-success btn-rounded btn-icon-left btn-shopping mr-auto">تخفیفات و جوایز</a>
 <!--                            <button type="submit" id="clear" class="btn btn-rounded btn-default btn-clear"-->
 <!--                                    {% if not session['cart'] %} disabled {% endif %}name="clear_cart"> پاک کردن سبد </button>-->
                             <!-- <button type="submit" class="btn btn-rounded btn-update disabled" name="update_cart" value="بروز کردن سبد">بروز کردن سبد</button> -->
